# python-project-49

./: Makefile  README.md  brain-gcd  brain-prime  brain-progression  demo.cast  pyproject.toml  test
brain_games/: cly.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even.py\  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_basis  logic_game.py
